# Taxonomy-Classifier-and-Outlier-Detection

./: .dockerignore  .env.example  .gitignore  Belege_aus_D_sampled.csv  Detectors.md  Dockerfile  README.md  README_OLD.md  TODO.md  TODO.txt  annotated_records.md  changes.md  config.json  docker-compose.yml  eval.ipynb  main.py  output.csv  pyproject.toml  requirements.txt  schema.json  testing.txt
app/: classify.py  cli.py  cli_functions.py  config.py  gbif_lookup.py  input.csv  input_annotated_output.csv  land_classifier.py  llm_lookup.py  main.py  main_with_cli.py  models.py  ollama_config.py  pipeline.py  process.py  prompts.py  report.py  schemas.py  taxonomy_lookup.py  train.py  utils.py
app/detectors/: base.py  date_outlier_detector.py  dbscan_detector.py  hdbscan_geo_detector.py  iqr_detector.py  isolation_forest_detector.py  llm_detector.py  modified_zscore_detector.py  rule_detector.py  semantic_rule_detector.py  zscore_detector.py
app/preprocessing/: bgbm_normalizer.py  process_csv.py
app/util/: gee_mapping.py  models.py  pricing.py  prompt_builder.py  taxon_ref.py  throttle.py
classifier-module/: Dockerfile  classifier.py  config.py  land_taxonomy.py  main.py  models.py  pipeline.py  process.py  requirements.txt  taxonomy_lookup.py  test.py
data/: input10.csv
land-taxonomy-api/: Dockerfile  README.md  main.py  requirements.txt
notebooks/: model_comparison.ipynb  statistical_detectors_tests.ipynb
notebooks/detector_outputs/: date_outlier_detector.csv  hdbscan_geo_detector.csv  iqr_detector.csv  modified_zscore_detector.csv  zscore_detector.csv  (+1 more)
results/: openai_model_comparison_interpretation.txt  openai_model_comparison_rows.csv  openai_model_comparison_summary.csv
testing/: APPROACH.md  PLAN.md  testing.ipynb
tests/: test_service.py
(+50 files in other folders)
