[project]
name = "taxonomy-classifier"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "earthengine-api>=1.7.35",
    "fastapi>=0.139.2",
    "geemap>=0.38.3",
    "httpx>=0.28.1",
    "openai>=2.45.0",
    "pandas>=3.0.3",
    "pyarrow>=25.0.0",
    "pygbif>=0.6.6",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "seaborn>=0.13.2",
    "uvicorn>=0.51.0",
]

[project.scripts]
taxonomy-classify = "app.cli:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["*.csv"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
